Build a standalone jar